# 3D-Solar-System

./: .gitignore  3D Solar System.slnx  CMakeLists.txt  main.cpp  vcpkg.json
3D Solar System/: 3D Solar System.vcxproj  main.cpp
3D Solar System/glad/include/glad/: glad.h
shaders/: main.frag  main.vert  sun.frag  sun.vert
